data/derived/comb/progs/unify/prog8092.ml.out
Characters 84-85:
  |Sine(e) -> sin(pi*.eval e)
                           ^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
